--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 	</div>
 	<div class="g-banner">
 		<div class="m-banner">
+			<div class="banner"><img src="img/banner1.jpg"></div>
 			<div class="m-controls">
 				<span class="cur"></span>
 				<span></span>
