--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="css/index.css">
 <body>
 	<div class="g-tips">
-		<div class="m-tips">
+		<div id="m-tips" class="m-tips">
 			<div class="main">网易云课堂微专业，帮助你掌握专业技能，令你求职或加薪多一份独特优势！</div>
 			<div class="show"><a href="#">立即查看></a></div>
 			<div class="no-tips"><a href="#"><span></span>不再提醒</a></div>
@@ -77,5 +77,9 @@
 		<div class="side"></div>
 	</div>
 	<div class="foot"></div>
+	<script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/md5.js"></script>
 </body>
+
+
 </html>
