partially finished slides

--- a/index.html
+++ b/index.html
@@ -48,12 +48,8 @@
 	</div>
 	<div class="g-banner">
 		<div class="m-banner">
-			<div class="banner"><img src="img/banner1.jpg"></div>
-			<div class="m-controls">
-				<span class="cur"></span>
-				<span></span>
-				<span></span>
-			</div>
+			<div class="banners"><img class="banner-picture current" src="img/banner1.jpg"><img class="banner-picture" src="img/banner2.jpg"><img class="banner-picture" src="img/banner3.jpg"></div>
+			<div class="m-controls"><span class="cur"></span><span></span><span></span></div>
 		</div>
 	</div>
 	<div class="projects"></div>
