--- a/index.html
+++ b/index.html
@@ -52,8 +52,35 @@
 			<div class="m-controls"><span class="cur"></span><span></span><span></span></div>
 		</div>
 	</div>
-	<div class="projects"></div>
-	<div class="pictures">
+	<div class="g-products">
+		<div class="m-products">
+			<div class="product product-1">
+				<div class="logo"></div>
+				<div class="content">
+					<div class="title">网易公开课</div>
+					<div class="intro">推出国内外名校公开课，涉及广泛的学科，名校老师认真讲解深度剖析，网易视频公开课频道搭建起强有力的网络视频教学平台。</div>
+					<a href="#" class="learn-more">了解更多></a>
+				</div>
+			</div>
+			<div class="product product-2">
+				<div class="logo"></div>
+				<div class="content">
+					<div class="title">网易云课堂</div>
+					<div class="intro">推出国内外名校公开课，涉及广泛的学科，名校老师认真讲解深度剖析，网易视频公开课频道搭建起强有力的网络视频教学平台。</div>
+					<a href="#" class="learn-more">了解更多></a>
+				</div>
+			</div>
+			<div class="product product-3">
+				<div class="logo"></div>
+				<div class="content">
+					<div class="title">中国大学MOOC</div>
+					<div class="intro">推出国内外名校公开课，涉及广泛的学科，名校老师认真讲解深度剖析，网易视频公开课频道搭建起强有力的网络视频教学平台。</div>
+					<a href="#" class="learn-more">了解更多></a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="pictures" style="background-color:#666666; width:100%;height:300px;">
 		<div class="picture-container">
 			<div class="picture"></div>
 			<div class="picture"></div>
